--- a/website/1.html
+++ b/website/1.html
@@ -176,19 +176,20 @@ This was a group project with 3 members involved. I, Jamin, and Ravinder. We dev
 The bush fire website project is also developed to give insights into the patterns of bush fires in Australia. It may assist researchers in establishing potential causes of the bush fires and identify which states and territories in Australia possess a higher risk of experiencing bush fire disasters.
 The project is named Bush Fire Whiz depicting that wizard-like information drawn from the bush fire data collected from the NASA MODIS satellites</p>
 </ul>
-        <ul>Slick 
+        <ul class="h3text">Slick 
             <p>A python program that opens multiple software at a time. It has memory and saves the previously opened software in .txt file format.
 I created a canvas that displays the software selected and with the help of Tkinter, there are two buttons offered to the user. It can be set to trigger after the boot-up of a laptop/PC.</p>
 </ul>
-            <ul>Designed a women safety android application called “Women Saviour” using XML in android studio for Dev/Test purpose.Developed a java code for the application. Being the Technical lead in my group, I was tasked with taking in user permissions in order to access power button actions. Along with sign up,registration page, maps and a push notification alert.</ul>
-            <ul>Breast cancer data analysis using Clustering Algorithm
+            <ul class="h3text">Women Saviour
+                <p>Designed a women safety android application called “Women Saviour” using XML in android studio for Dev/Test purpose.Developed a java code for the application. Being the Technical lead in my group, I was tasked with taking in user permissions in order to access power button actions. Along with sign up,registration page, maps and a push notification alert.</p></ul>
+            <ul class="h3text">Breast cancer data analysis using Clustering Algorithm
                 <p>For our data mining subject (CP5634) we were handed a project to analyze a data set and report a conclusion based on the analysis. The topic we chose was Breast Cancer in Australia.
 The data obtained by one of three domains provided by the Oncology Institute has repeatedly appeared in the machine learning literature. It includes 201 instances of one class and 85 instances of another class.
 In this project, we chose the clustering data mining algorithm as it is used to provide an effective analysis of the breast cancer data set. Basically, the clustering algorithm has various techniques, but in our analysis, we used the below clustering algorithm such as,
                     Simple K-Means, Filtered cluster, Hierarchical Cluster, EM Cluster. </p>
      
 </ul>
-            <ul>AI Assistant
+            <ul class="h3text">AI Assistant
                 <p>A python program that makes API calls to WolframAlpha ( a website that gives information about general and daily questions) and another API call to Wikipedia for in-depth answers. 
                     The program uses a simple GUI interpreter for Graphic User Interface. Also a text to speech engine that converts all the displayed information into audio.</p>
 </ul>
