--- a/website/1.html
+++ b/website/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
     <meta http-equiv="X-UA_Compatible" content="ie=edge">
-    <title>Aakash Kodolikar</title>
+    <title style="font-size:10vw">Aakash Kodolikar</title>
     <link rel="stylesheet" href="s.css">
     <script src="https://earthdata.nasa.gov/earth-observation-data/near-real-time/firms"></script>
     
